package com.smile.factory.color;

/**
 * @author smi1e
 * Date 2019/8/15 10:19
 * Description
 */
public class Black implements Color {
    @Override
    public void fill() {
        System.out.println("fill black");
    }
}
