package com.smile.factory.color;

/**
 * @author smi1e
 * Date 2019/8/15 10:14
 * Description
 */
public interface Color {
    public void fill();
}
