package com.smile.factory.color;

/**
 * @author smi1e
 * Date 2019/8/15 10:18
 * Description
 */
public class Red implements Color {
    @Override
    public void fill() {
        System.out.println("fill red");
    }
}
