package com.smile.factory.shape;

/**
 * @author smi1e
 * Date 2019/8/15 10:17
 * Description
 */
public class Rectangle implements Shape {
    @Override
    public void draw() {
        System.out.println("Ractangle is drawing");
    }
}
