package com.smile.factory.shape;

/**
 * @author smi1e
 * Date 2019/8/15 10:12
 * Description
 */
public interface Shape {
    public void draw();
}
