package com.smile.factory.shape;

/**
 * @author smi1e
 * Date 2019/8/15 10:15
 * Description
 */
public class Square implements Shape {
    @Override
    public void draw() {
        System.out.println("Square is drawing");
    }
}
